# alphanode-forge

./: .gitignore  CHANGELOG.md  Dockerfile  Readme.md  blueprint.md  docker-compose.yml  pyproject.toml  xmake.lua
.cursor/: cpp-style.mdc  docs-style.mdc  project-backlog.mdc
docker/: hub.Dockerfile  scout.Dockerfile
docs/: Project Management.md  research-gate.md  simons-principles.md
forge/: __init__.py  promotion.py
forge-docs/: Project Management.md  Strategies.md  Strategy.md  blueprint.md  research-gate.md  simons-principles.md
forge/data/: alpha.db
forge/execution/: __init__.py  state.py
forge/features/: __init__.py
forge/signals/: __init__.py
hub/: cli.py  crypto_market.py
hub/api/: main.py
hub/api/core/: db.py
hub/api/models/: portfolio.py
hub/api/services/: portfolio_service.py
hub/ui/: crypto_dashboard.py  main.py
ingest/: init_db.py  jsonl_to_parquet.py
metal-analytics/: eda_market_ws_alpha_eval_audit.ipynb  eda_matrix_math_alpha_eval.ipynb
native/: p2p_rate_monitor.cpp  p2p_types.hpp
native/common/: connect_db.hpp  time.hpp
native/p2p/: ingest.hpp
research/: README.md  eda_arb_strat_01_crypto_audit.ipynb  eda_binance_universe_audit.ipynb  eda_execution_order_history_audit.ipynb  eda_market_ws_alpha_eval_audit.ipynb  eda_matrix_math_alpha_eval.ipynb  eda_offline_alpha_eval_audit.ipynb  eda_tri_arb_01_alpha.ipynb  etl_trade_account_audit.ipynb  ipynb-naming.md
research/notebooks/: etl_trade_account_audit.ipynb
src/: main.py
src/core/: db.py
src/models/: __init__.py
src/services/: portfolio_service.py
(+4 files in other folders)
