[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "alpha-node-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.7.0",
    "sqlmodel>=0.0.22",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["hub"]

