[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "alpha-node-forge"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
]

[project.scripts]
alpha-forge = "hub.cli:main"

[dependency-groups]
dev = [
    "pandas>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["forge", "hub"]
