[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "alpha-node-forge"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
    "polars>=1.0",
    "pyarrow>=15",
]

[dependency-groups]
dev = [
    "pandas>=2.2",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["forge"]
